# chronofactorem-rewrite

./: .dockerignore  .env example  .env.example  .env.testing  .eslintrc.cjs  .gitignore  .prettierignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  biome.json  checks.md  create-search.py  docker-compose.yml  nginx.dev.conf  nginx.prod.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  pyproject.toml  tsconfig.json
.github/workflows/: build.yml  ci.yml  linting.yml  pipeline.yml  prettier.yml  release.yml
backend/: biome.json  jest.config.js  nodemon.json  package.json  pnpm-lock.yaml  tsconfig.json
backend/src/: app.ts  db.ts  index.ts  ingest.ts  ingestJSON.test.ts  ingestJSON.ts  sqids.ts  timetable.json
config/: schema.ts  server.ts
docker/dev/: Dockerfile
docker/prod/: Dockerfile
docs/: auth-migration-notes.md
frontend/: .gitignore  CDCs.json  biome.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: About.tsx  AuthenticatedRoute.tsx  CMS.tsx  CMSExport.tsx  CMSOption.tsx  Cms.tsx  CmsExport.tsx  EditTimetable.tsx  EditUserProfile.tsx  Finalize.tsx  FinalizeTimetable.tsx  GetDegrees.tsx  Home.tsx  Login.tsx  NotFound.tsx  RootComponent.tsx  SearchResults.tsx  ViewTimetable.tsx  index.css  main.tsx  router.tsx
lib/: biome.json  package.json  pnpm-lock.yaml  tsconfig.json
lib/src/: degrees.ts  getBatch.ts  index.ts  zod.ts  (+3 more)
patches/: jose@4.14.4.patch
src/: app.ts  data-source.ts  db.ts  index.ts  ingest.ts  ingestJSON.ts  routes.ts  timetable.json
(+202 files in other folders)
