[tool.poetry]
name = "chronofactorem-rewrite"
version = "0.1.0"
description = ""
authors = ["majimearun <arunachala0619@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
